Fixed spacing in CurrentlyPlayed and its height inside the frame; Changed style of buttons; Replaced the rotated skipButton svg with new backButton SVG (caused problems with other stlying properties); Went from min font size 16px to 12px for general content text;
CurrentlyPlayed progress bar now sits at the bottom of the frame, height of the section is now fixed to fit the frame.
Gave the MediaControls and song and artist text more space within the CurrentlyPlaying section.
Changed the styling of the MediaControl buttons to black background, with orange fill and border

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 *{
   margin: 0;
   padding: 0;
-  font-size: max(1.5vw, 16px);
+  font-size: max(12px, 1.5vw);
   font-family: sans-serif;
 }
 
@@ -17,12 +17,4 @@ h1 {
 
 h2 {
   font-size: max(16px, 2vw);
-}
-
-.dropDownButton {
-  transition: all .1s ease-in-out;
-  transform: rotate(' + this.state.rotation + ');
-  background-color: inherit;
-  border: none;
-  width: 1.5vw;
 }
